# llm-council

./: .env.example  MCP_QUICKSTART.md  README.md  mcp-config.example.json  pyproject.toml
.github/: copilot-instructions.md
backend/: mcp_server.py
