[project]
name = "llm-council"
version = "0.1.0"
description = "Your LLM Council - Multi-LLM deliberation system with MCP server support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "mcp>=1.0.0",
]

[project.scripts]
llm-council-mcp = "backend.mcp_server:main"
llm-council-web = "backend.main:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
